--- a/In_Class_Notebooks/ParameterSweep/2_3_pd-sweep.ipynb
+++ b/In_Class_Notebooks/ParameterSweep/2_3_pd-sweep.ipynb
@@ -22,6 +22,7 @@
     "In this notebook, we implement a very simple \"Prisoner's Dilemma\" model using two different types of players and demonstrate how to run a parameter sweep for the model.\n",
     "\n",
     "For more information on the Prisoner's Dilemma and its application to real world topics, see https://en.wikipedia.org/wiki/Prisoner's_dilemma\n"
+    "#### [View this repository on NBViewer](http://nbviewer.jupyter.org/github/lynetteshaw/cscs-530-wi2017/tree/master/)\n"
    ]
   },
   {
