--- a/ABMandPython/hiv-parameter-sweep.ipynb
+++ b/ABMandPython/hiv-parameter-sweep.ipynb
@@ -33,7 +33,8 @@
     "  * Observe number of steps to 50% infected\n",
     "  * Observe the mean and standard deviation of sexual partner degree distribution\n",
     " \n",
-    "  To formally describe our model, let's break it down into pieces:\n",
+    "\n",
+    "To formally describe our model, let's break it down into pieces:\n",
     "\n",
     "### I. Space\n",
     "  In this model, our space will be a two-dimensional (2D) square grid.  Each grid cell will contain zero or one people.  Edges of the grid will wrap around.\n",
@@ -175,26 +176,7 @@
     "        \"\"\"\n",
     "        Return neighbors, calling through model.\n",
     "        \"\"\"\n",
-    "        return self.model.get_person_neighbors(self.person_id)\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        '''\n",
-    "        Return string representation.\n",
-    "        '''\n",
-    "        skip_none = True\n",
-    "        repr_string = type(self).__name__ + \" [\"\n",
-    "        except_list = \"model\"\n",
-    "\n",
-    "        elements = [e for e in dir(self) if str(e) not in except_list]\n",
-    "        for e in elements:\n",
-    "            # Make sure we only display \"public\" fields; skip anything private (_*), that is a method/function, or that is a module.\n",
-    "            if not e.startswith(\"_\") and eval('type(self.{0}).__name__'.format(e)) not in ['DataFrame', 'function', 'method', 'builtin_function_or_method', 'module', 'instancemethod']:\n",
-    "                    value = eval(\"self.\" + e)\n",
-    "                    if value != None and skip_none == True:\n",
-    "                        repr_string += \"{0}={1}, \".format(e, value)\n",
-    "\n",
-    "        # Clean up trailing space and comma.\n",
-    "        return repr_string.strip(\" \").strip(\",\") + \"]\""
+    "        return self.model.get_person_neighbors(self.person_id)\n"
    ]
   },
   {
@@ -496,30 +478,6 @@
     "            # Return historical step\n",
     "            return self.history_space_infected[t]\n",
     "        \n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        '''\n",
-    "        Return string representation.\n",
-    "        '''\n",
-    "        skip_none = True\n",
-    "        repr_string = type(self).__name__ + \" [\"\n",
-    "\n",
-    "        elements = dir(self)\n",
-    "        for e in elements:\n",
-    "            # Make sure we only display \"public\" fields; skip anything private (_*), that is a method/function, or that is a module.\n",
-    "            e_type = eval('type(self.{0}).__name__'.format(e))\n",
-    "            if not e.startswith(\"_\") and e_type not in ['DataFrame', 'function', 'method', 'builtin_function_or_method', 'module', 'instancemethod']:\n",
-    "                    value = eval(\"self.\" + e)\n",
-    "                    if value != None and skip_none == True:\n",
-    "                        if e_type in ['list', 'set', 'tuple']:\n",
-    "                            repr_string += \"\\n\\n\\t{0}={1},\\n\\n\".format(e, value)\n",
-    "                        elif e_type in ['ndarray']:\n",
-    "                            repr_string += \"\\n\\n\\t{0}=\\t\\n{1},\\n\\n\".format(e, value)\n",
-    "                        else:\n",
-    "                            repr_string += \"{0}={1}, \".format(e, value)\n",
-    "\n",
-    "        # Clean up trailing space and comma.\n",
-    "        return repr_string.strip(\" \").strip(\",\") + \"]\"\n",
     "\n"
    ]
   },
@@ -528,46 +486,6 @@
    "metadata": {},
    "source": [
     "## Setup our parameter sweep"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Set number of samples per value and steps per sample\n",
-    "num_samples = 20\n",
-    "num_steps = 100\n",
-    "\n",
-    "# Set basic model parameters\n",
-    "grid_size = 20\n",
-    "num_people = 25\n",
-    "\n",
-    "# Set subsidy values to \"sweep\" over\n",
-    "subsidy_sweep_values = [0.0, 0.2, 0.4, \n",
-    "                        0.6, 0.8, 1.0]\n",
-    "subsidy_sweep_output = []\n",
-    "\n",
-    "# Iterate over values\n",
-    "for subsidy_value in subsidy_sweep_values:\n",
-    "    print(\"Running {0} samples for sweep value {1}\"\\\n",
-    "              .format(num_samples, subsidy_value))\n",
-    "    for n in xrange(num_samples):\n",
-    "        # Output info\n",
-    "        m = Model(grid_size=grid_size,\n",
-    "                  num_people=num_people,\n",
-    "                  min_condom_budget=0.0,\n",
-    "                  max_condom_budget=1.0,\n",
-    "                  min_subsidy=subsidy_value,\n",
-    "                  max_subsidy=subsidy_value)\n",
-    "        for t in xrange(num_steps):\n",
-    "            m.step()\n",
-    "        subsidy_sweep_output.append((subsidy_value, n, m.num_infected,\n",
-    "                                     m.num_interactions,\n",
-    "                                     m.num_interactions_condoms))"
    ]
   },
   {
